# utils/file.utils.go
@@ -2,9 +2,9 @@ package utils
 
 import (
 	base642 "encoding/base64"
-	"example.com/ramen/initializers"
 	"example.com/ramen/models/file"
 	"fmt"
+	"gorm.io/gorm"
 	"io/ioutil"
 	"net/http"
 	"strconv"
@@ -13,13 +13,17 @@ import (
 	"github.com/google/uuid"
 )
 
-func FileUpload(base64Image string, ParentId *uuid.UUID, Category string) error {
+func FileUpload(base64Image string, ParentId uuid.UUID, Category string, tx *gorm.DB) error {
 	var c *fiber.Ctx
 	var fileName string
 	decoded, err := base642.StdEncoding.DecodeString(base64Image)
 	size := strconv.FormatInt(int64(len(base64Image)*3/4), 10)
 	if err != nil {
 		return err
+	}
+	// 5mb limit
+	if len(decoded) > 5000000 {
+		return c.Status(http.StatusBadRequest).JSON(ResponseObj{ResponseCode: http.StatusBadRequest, ResponseMsg: "File size is too large"})
 	}
 	// generate uui for file name
 	uid := uuid.New()
@@ -33,15 +37,23 @@ func FileUpload(base64Image string, ParentId *uuid.UUID, Category string) error 
 
 	var file file.File
 
-	file.ParentId = ParentId.String()
-	file.Category = Category
-	file.FileName = fileName
-	file.Size = size
-	file.FilePath = fmt.Sprintf("/uploads/%s", fileName)
+	if Category == "company" {
+		file.CompanyParentId = ParentId.String()
+		file.Category = Category
+		file.FileName = fileName
+		file.Size = size
+		file.FilePath = fmt.Sprintf("/uploads/%s", fileName)
+	} else {
 
-	if err := initializers.DB.Create(&file).Error; err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(ResponseObj{ResponseCode: http.
-			StatusBadRequest, ResponseMsg: "File uploads failed" + err.Error()})
+		file.ParentId = ParentId.String()
+		file.Category = Category
+		file.FileName = fileName
+		file.Size = size
+		file.FilePath = fmt.Sprintf("/uploads/%s", fileName)
+	}
+
+	if err := tx.Create(&file).Error; err != nil {
+		return err
 	}
 	return nil
 }
